Apply spotless formatting to everything